# VulkanPlayground

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  application.cpp  application.h  default.profraw  main.cpp  vcpkg.json
application/: GLFWWindow.cpp  GLFWWindow.h  HelloTriangle.cpp  HelloTriangle.h  Shader.cpp  Shader.h  VulkanDebugLog.cpp  VulkanDebugLog.h
cmake/: build_glsls.cmake  x64-linux-llvm.toolchain.cmake  x64-osx-llvm.cmake  x64-osx-llvm.toolchain.cmake  x64-windows-llvm-release.cmake  x64-windows-llvm-static.cmake  x64-windows-llvm.cmake  x64-windows-llvm.toolchain-no-lto.cmake  x64-windows-llvm.toolchain.cl.cmake  x64-windows-llvm.toolchain.cmake
shaders/: default.profraw  fragment.frag  shader.vert  vertex.vert
